- Added flex-wrap to fix titlecard on lower screen sizes

--- a/my-app/src/components/Titlecard/Titlecard.module.css
+++ b/my-app/src/components/Titlecard/Titlecard.module.css
@@ -1,19 +1,24 @@
 .Cardholder{
     margin: auto auto auto auto;
     width: 90%;
-    height: 17.5vh;
+    height: auto;
     background-color: rgb(255, 255, 255);
     border-radius: 5px;
     display: flex;
     flex-direction: row;
     margin-top: 3%;
     box-shadow: 0px 1px 2px rgb(102 102 102);
+    flex-wrap: wrap;
 }
 
 .MainIntro{
     padding-left: 10px;
     margin-top: 1%;
     margin-bottom: 2px;
+}
+
+.TextHolder{
+    flex-wrap: wrap;
 }
 
 .SubIntro{
